Promenjeno ime projekta

--- a/src/draganbjedov/csv/Bundle.properties
+++ b/src/draganbjedov/csv/Bundle.properties
@@ -2,5 +2,5 @@ OpenIDE-Module-Display-Category=Editing
 OpenIDE-Module-Long-Description=\
     Simple graphical editor for CSV files. \
     Graphical view is table with add/remove row/column options.
-OpenIDE-Module-Name=CSVModule
+OpenIDE-Module-Name=NB CSV Editor
 OpenIDE-Module-Short-Description=Simple graphical editor for CSV files
