--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,4 +1,4 @@
 javac.source=1.6
 javac.compilerargs=-Xlint -Xlint:-serial
 license.file=licence.txt
-nbm.module.author=Dragan Bjedov
+nbm.module.author=Dragan Bjedov (draganbjedov@gmail.com)
