--- a/src/draganbjedov/csv/Bundle.properties
+++ b/src/draganbjedov/csv/Bundle.properties
@@ -1,6 +1,7 @@
 OpenIDE-Module-Display-Category=Editing
 OpenIDE-Module-Long-Description=\
     Simple graphical editor for CSV files. \
-    Graphical view is table with add/remove row/column options.
+    Graphical view is table.\n\
+    Avalible operations are:\n- Add/Remove rows/columns\n- Copy rows\n- Cut rows\n- Paste rows\n- Move up rows\n- Move down rows\n- Move rows to the top\n- Move rows to the bottom\n- Undo/Redo
 OpenIDE-Module-Name=NB CSV Editor
 OpenIDE-Module-Short-Description=Simple graphical editor for CSV files
