--- a/nbproject/platform.properties
+++ b/nbproject/platform.properties
@@ -14,5 +14,5 @@ cluster.path=\
     ${nbplatform.active.dir}/dlight:\
     ${nbplatform.active.dir}/javafx:\
     ${nbplatform.active.dir}/ide
-nbjdk.active=JDK_1.6
+nbjdk.active=default
 nbplatform.active=default
