Added: * Actions from toolbar to table popup menu

--- a/src/draganbjedov/netbeans/csv/view/Bundle.properties
+++ b/src/draganbjedov/netbeans/csv/view/Bundle.properties
@@ -1,3 +1,18 @@
-CSVVisualElement.copyPopUp.text=Copy row(s)
-CSVVisualElement.cutPopUp.text=Cut row(s)
-CSVVisualElement.pastePopUp.text=Paste row(s)
+CSVVisualElement.copyPopUp.text=Copy rows
+CSVVisualElement.cutPopUp.text=Cut rows
+CSVVisualElement.pastePopUp.text=Paste rows
+#Buttons
+CSVVisualElement.addRowButton.text=Add row
+CSVVisualElement.deleteRowButton.text=Delete rows
+CSVVisualElement.addColumnButton.text=Add column
+CSVVisualElement.deleteColumnButton.text=Delete columns
+#Move rows
+CSVVisualElement.moveTopPopUp.text=Move rows to the top
+CSVVisualElement.moveUpPopUp.text=Move rows up
+CSVVisualElement.moveDownPopUp.text=Move rows down
+CSVVisualElement.moveBottomPopUp.text=Move rows to the bottom
+#Move columns
+CSVVisualElement.moveHomePopUp.text=Move columns to the begining
+CSVVisualElement.moveLeftPopUp.text=Move columns left
+CSVVisualElement.moveRightPopUp.text=Move columns right
+CSVVisualElement.moveEndPopUp.text=Move to columns to the end
