--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -2,3 +2,6 @@ javac.source=1.6
 javac.compilerargs=-Xlint -Xlint:-serial
 license.file=licence.txt
 nbm.module.author=Dragan Bjedov (draganbjedov@gmail.com)
+#Signing plugin
+keystore=nbproject/private/keystore
+nbm_alias=draganbjedov
