--- a/src/draganbjedov/netbeans/csv/view/Bundle.properties
+++ b/src/draganbjedov/netbeans/csv/view/Bundle.properties
@@ -16,3 +16,7 @@ CSVVisualElement.moveHomePopUp.text=Move columns to the begining
 CSVVisualElement.moveLeftPopUp.text=Move columns left
 CSVVisualElement.moveRightPopUp.text=Move columns right
 CSVVisualElement.moveEndPopUp.text=Move to columns to the end
+#Separator
+CSVVisualElement.separatorLabel.text=Separator:
+CSVVisualElement.refreshSeparators.tooltip=Refresh list of available separators
+CSVVisualElement.separators.tooltip=Set default separator in Tools/Options/Advanced/CSV Editor
