Added: Escape charachter

--- a/src/draganbjedov/netbeans/csv/options/Bundle.properties
+++ b/src/draganbjedov/netbeans/csv/options/Bundle.properties
@@ -1,6 +1,16 @@
 CSVEditorPanel.defaultSeparatorLabel.text=Default separator:
-CSVEditorPanel.addButton.text=Add
-CSVEditorPanel.removeButton.text=Remove
 #Errors
-CSVEditorPanel.error.add=Separator already exists
-CSVEditorPanel.error.remove=Separators , and ; can not be removed.
+CSVEditorPanel.error.addSeparator=Separator already exists
+CSVEditorPanel.error.removeSeparator=Separators , and ; can not be removed.
+CSVEditorPanel.error.addEscapeChar=Escape char already exists
+CSVEditorPanel.error.removeEscapeChar=Escape char " can not be removed.
+
+CSVEditorPanel.defaultEscapeCharLabel.text=Default escape charachter:
+CSVEditorPanel.addSButton.text=Add
+CSVEditorPanel.removeSButton.text=Remove
+CSVEditorPanel.addEButton.text=Add
+CSVEditorPanel.removeEButton.text=Remove
+CSVEditorPanel.separatorsPanel.border.title=Separators
+CSVEditorPanel.escapeCharsPanel.border.title=Escape charachters
+CSVEditorPanel.jLabel1.text=(max 1 charachter)
+CSVEditorPanel.jLabel2.text=(max 1 charachter)
