--- a/src/draganbjedov/netbeans/csv/Bundle.properties
+++ b/src/draganbjedov/netbeans/csv/Bundle.properties
@@ -2,6 +2,6 @@ OpenIDE-Module-Display-Category=Editing
 OpenIDE-Module-Long-Description=\
     Graphical editor for CSV files. \
     Graphical view is table.\n\
-    Avalible operations are:\n- Add/Remove rows/columns\n- Copy rows\n- Cut rows\n- Paste rows\n- Move up rows\n- Move down rows\n- Move rows to the top\n- Move rows to the bottom\n- Undo/Redo\n- Move columns to the beginning\n- Move columns left\n- Move columns right\n- Move columns to the end\n- Choose separator
+    Avalible operations are:\n- Add/Remove rows/columns\n- Copy rows\n- Cut rows\n- Paste rows\n- Move up rows\n- Move down rows\n- Move rows to the top\n- Move rows to the bottom\n- Undo/Redo\n- Move columns to the beginning\n- Move columns left\n- Move columns right\n- Move columns to the end\n- Choose separator\n- Choose escape charachter
 OpenIDE-Module-Name=NB CSV Editor
 OpenIDE-Module-Short-Description=Graphical editor for CSV files
