Changed label in Options

--- a/src/draganbjedov/netbeans/csv/options/Bundle.properties
+++ b/src/draganbjedov/netbeans/csv/options/Bundle.properties
@@ -11,6 +11,6 @@ CSVEditorPanel.removeSButton.text=Remove
 CSVEditorPanel.addEButton.text=Add
 CSVEditorPanel.removeEButton.text=Remove
 CSVEditorPanel.separatorsPanel.border.title=Separators
-CSVEditorPanel.escapeCharsPanel.border.title=Escape charachters
+CSVEditorPanel.escapeCharsPanel.border.title=Quoting (Escape charachters)
 CSVEditorPanel.jLabel1.text=(max 1 charachter)
 CSVEditorPanel.jLabel2.text=(max 1 charachter)
