Corrections for NB version 7.2.1

--- a/nbproject/platform.properties
+++ b/nbproject/platform.properties
@@ -15,4 +15,4 @@ cluster.path=\
     ${nbplatform.active.dir}/javafx:\
     ${nbplatform.active.dir}/ide
 nbjdk.active=default
-nbplatform.active=default
+nbplatform.active=NetBeans_7.2.1
