--- a/nbproject/platform.properties
+++ b/nbproject/platform.properties
@@ -15,4 +15,4 @@ cluster.path=\
     ${nbplatform.active.dir}/javafx:\
     ${nbplatform.active.dir}/ide
 nbjdk.active=default
-nbplatform.active=default
+nbplatform.active=NetBeans_IDE_8.0_RC1_(Build_201402242200)
