Needs restart on install

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -5,4 +5,5 @@ license.file=licence.txt
 nbm.module.author=Dragan Bjedov (draganbjedov@gmail.com)
 #Signing plugin
 keystore=nbproject/private/keystore
+nbm.needs.restart=true
 nbm_alias=draganbjedov
