--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -7,3 +7,4 @@ nbm.module.author=Dragan Bjedov (draganbjedov@gmail.com)
 keystore=nbproject/private/keystore
 nbm.needs.restart=true
 nbm_alias=draganbjedov
+spec.version.base=2.2
