--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,10 +1,13 @@
 auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
+file.reference.swingx-all-1.6.4.jar=release/modules/ext/swingx-all-1.6.4.jar
 javac.source=1.6
 javac.compilerargs=-Xlint -Xlint:-serial
+javadoc.reference.swingx-all-1.6.4.jar=../../JavaLibs/SwingX/swingx-all-1.6.4-javadoc.jar
 license.file=licence.txt
 nbm.module.author=Dragan Bjedov (draganbjedov@gmail.com)
 #Signing plugin
 keystore=nbproject/private/keystore
 nbm.needs.restart=true
 nbm_alias=draganbjedov
+source.reference.swingx-all-1.6.4.jar=../../JavaLibs/SwingX/swingx-all-1.6.4-sources.jar
 spec.version.base=2.2
