--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,6 +1,7 @@
 auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
+file.reference.swing-bits-1.0.jar=/media/Dragan/NetBeansProjects/NB CSV Editor/release/modules/ext/swing-bits-1.0.jar
 file.reference.swingx-all-1.6.4.jar=release/modules/ext/swingx-all-1.6.4.jar
-javac.source=1.6
+javac.source=1.8
 javac.compilerargs=-Xlint -Xlint:-serial
 javadoc.reference.swingx-all-1.6.4.jar=../../JavaLibs/SwingX/swingx-all-1.6.4-javadoc.jar
 license.file=licence.txt
@@ -9,5 +10,6 @@ nbm.module.author=Dragan Bjedov (draganbjedov@gmail.com)
 keystore=nbproject/private/keystore
 nbm.needs.restart=true
 nbm_alias=draganbjedov
+source.reference.swing-bits-1.0.jar=../../EuroICC/SwingBits-hg/swingbits/src/main/java/
 source.reference.swingx-all-1.6.4.jar=../../JavaLibs/SwingX/swingx-all-1.6.4-sources.jar
 spec.version.base=2.2
