Add, remove and rename column is done via dialog

--- a/src/draganbjedov/netbeans/csv/view/Bundle.properties
+++ b/src/draganbjedov/netbeans/csv/view/Bundle.properties
@@ -5,7 +5,8 @@ CSVVisualElement.pastePopUp.text=Paste rows
 CSVVisualElement.addRowButton.text=Add row
 CSVVisualElement.deleteRowButton.text=Delete rows
 CSVVisualElement.addColumnButton.text=Add column
-CSVVisualElement.deleteColumnButton.text=Delete columns
+CSVVisualElement.deleteColumnButton.text=Delete column
+CSVVisualElement.renameColumnButton.text=Rename column
 #Move rows
 CSVVisualElement.moveTopPopUp.text=Move rows to the top
 CSVVisualElement.moveUpPopUp.text=Move rows up
