Added tab char as separator

--- a/src/draganbjedov/netbeans/csv/options/Bundle.properties
+++ b/src/draganbjedov/netbeans/csv/options/Bundle.properties
@@ -1,7 +1,7 @@
 CSVEditorPanel.defaultSeparatorLabel.text=Default separator:
 #Errors
 CSVEditorPanel.error.addSeparator=Separator already exists
-CSVEditorPanel.error.removeSeparator=Separators , and ; can not be removed.
+CSVEditorPanel.error.removeSeparator=Separators , and ; and Tab can not be removed.
 CSVEditorPanel.error.addEscapeChar=Escape char already exists
 CSVEditorPanel.error.removeEscapeChar=Escape char " can not be removed.
 
