--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,15 +1,16 @@
-auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
-file.reference.swing-bits-1.0.jar=/media/Dragan/NetBeansProjects/NB CSV Editor/release/modules/ext/swing-bits-1.0.jar
-file.reference.swingx-all-1.6.4.jar=release/modules/ext/swingx-all-1.6.4.jar
+#
+#Sun Oct 09 13:34:51 CEST 2016
 javac.source=1.8
-javac.compilerargs=-Xlint -Xlint:-serial
 javadoc.reference.swingx-all-1.6.4.jar=../../JavaLibs/SwingX/swingx-all-1.6.4-javadoc.jar
-license.file=licence.txt
-nbm.module.author=Dragan Bjedov (draganbjedov@gmail.com)
-#Signing plugin
-keystore=nbproject/private/keystore
-nbm.needs.restart=true
-nbm_alias=draganbjedov
-source.reference.swing-bits-1.0.jar=../../EuroICC/SwingBits-hg/swingbits/src/main/java/
 source.reference.swingx-all-1.6.4.jar=../../JavaLibs/SwingX/swingx-all-1.6.4-sources.jar
+license.file=licence.txt
 spec.version.base=3.0
+nbm.needs.restart=true
+nbm.module.author=Dragan Bjedov (draganbjedov@gmail.com)
+file.reference.swing-bits-1.0.jar=/media/Dragan/NetBeansProjects/NB CSV Editor/release/modules/ext/swing-bits-1.0.jar
+keystore=nbproject/private/draganbjedovnbcsv
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
+nbm_alias=draganbjedov
+file.reference.swingx-all-1.6.4.jar=release/modules/ext/swingx-all-1.6.4.jar
+javac.compilerargs=-Xlint -Xlint\:-serial -Xlint\:-rawtypes -Xlint\:-unchecked
+source.reference.swing-bits-1.0.jar=../../EuroICC/SwingBits-hg/swingbits/src/main/java/
