Fixed table view in Darcula LAF

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,4 @@
+file.reference.iconloader.jar=release/modules/ext/iconloader.jar
 #
 #Sun Oct 09 13:34:51 CEST 2016
 javac.source=1.8
@@ -7,7 +8,7 @@ license.file=licence.txt
 spec.version.base=3.0
 nbm.needs.restart=true
 nbm.module.author=Dragan Bjedov (draganbjedov@gmail.com)
-file.reference.swing-bits-1.0.jar=/media/Dragan/NetBeansProjects/NB CSV Editor/release/modules/ext/swing-bits-1.0.jar
+file.reference.swing-bits-1.0.jar=release/modules/ext/swing-bits-1.0.jar
 keystore=nbproject/private/draganbjedovnbcsv
 auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 nbm_alias=draganbjedov
