Added option define is first row header row or not

--- a/src/draganbjedov/netbeans/csv/view/Bundle.properties
+++ b/src/draganbjedov/netbeans/csv/view/Bundle.properties
@@ -2,6 +2,8 @@ CSVVisualElement.copyPopUp.text=Copy rows
 CSVVisualElement.cutPopUp.text=Cut rows
 CSVVisualElement.pastePopUp.text=Paste rows
 #Buttons
+CSVVisualElement.toggleHeaderButton.text=Toggle first row is header row
+
 CSVVisualElement.addRowButton.text=Add row
 CSVVisualElement.deleteRowButton.text=Delete rows
 CSVVisualElement.addColumnButton.text=Add column
@@ -13,10 +15,12 @@ CSVVisualElement.moveUpPopUp.text=Move rows up
 CSVVisualElement.moveDownPopUp.text=Move rows down
 CSVVisualElement.moveBottomPopUp.text=Move rows to the bottom
 #Move columns
-CSVVisualElement.moveHomePopUp.text=Move columns to the begining
+CSVVisualElement.moveHomePopUp.text=Move columns to the beginning
 CSVVisualElement.moveLeftPopUp.text=Move columns left
 CSVVisualElement.moveRightPopUp.text=Move columns right
 CSVVisualElement.moveEndPopUp.text=Move to columns to the end
 #Separator
 CSVVisualElement.separatorLabel.text=Separator:
 CSVVisualElement.separators.tooltip=Set default separator in Tools/Options/Miscellaneous/CSV Editor
+
+CSVVisualElement.defaultColName=<html><i>Column {0}
