Added "Add header row" functionality

--- a/src/draganbjedov/netbeans/csv/view/Bundle.properties
+++ b/src/draganbjedov/netbeans/csv/view/Bundle.properties
@@ -3,6 +3,8 @@ CSVVisualElement.cutPopUp.text=Cut rows
 CSVVisualElement.pastePopUp.text=Paste rows
 #Buttons
 CSVVisualElement.toggleHeaderButton.text=Toggle first row is header row
+CSVVisualElement.addHeaderButton.text=Add header row
+CSVVisualElement.addHeaderButton.dialog.msg="Enter column names ({0}) separated with comma:"
 
 CSVVisualElement.addRowButton.text=Add row
 CSVVisualElement.deleteRowButton.text=Delete rows
@@ -23,4 +25,5 @@ CSVVisualElement.moveEndPopUp.text=Move to columns to the end
 CSVVisualElement.separatorLabel.text=Separator:
 CSVVisualElement.separators.tooltip=Set default separator in Tools/Options/Miscellaneous/CSV Editor
 
+CSVVisualElement.colName=Column {0}
 CSVVisualElement.defaultColName=<html><i>Column {0}
