Updated version to 3.2

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -5,7 +5,7 @@ javac.source=1.8
 javadoc.reference.swingx-all-1.6.4.jar=../../JavaLibs/SwingX/swingx-all-1.6.4-javadoc.jar
 source.reference.swingx-all-1.6.4.jar=../../JavaLibs/SwingX/swingx-all-1.6.4-sources.jar
 license.file=licence.txt
-spec.version.base=3.1
+spec.version.base=3.2
 nbm.needs.restart=true
 nbm.module.author=Dragan Bjedov (draganbjedov@gmail.com)
 file.reference.swing-bits-1.0.jar=release/modules/ext/swing-bits-1.0.jar
@@ -13,5 +13,5 @@ keystore=nbproject/private/draganbjedovnbcsv
 auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 nbm_alias=draganbjedov
 file.reference.swingx-all-1.6.4.jar=release/modules/ext/swingx-all-1.6.4.jar
-javac.compilerargs=-Xlint -Xlint\:-serial -Xlint\:-rawtypes -Xlint\:-unchecked
+javac.compilerargs=-Xlint -Xlint:-serial -Xlint:-rawtypes -Xlint:-unchecked
 source.reference.swing-bits-1.0.jar=../../EuroICC/SwingBits-hg/swingbits/src/main/java/
