--- a/pom.xml
+++ b/pom.xml
@@ -144,17 +144,12 @@
         <dependency>
             <groupId>org.swinglabs.swingx</groupId>
             <artifactId>swingx-all</artifactId>
-            <version>1.6.4</version>
-        </dependency>
-        <dependency>
-            <groupId>net.coderazzi</groupId>
-            <artifactId>tablefilter-swing</artifactId>
-            <version>5.1.1</version>
+            <version>1.6.5-1</version>
         </dependency>
         <dependency>
             <groupId>org.bidib.org.oxbow</groupId>
             <artifactId>swingbits</artifactId>
-            <version>1.0</version>
+            <version>1.2.2</version>
         </dependency>
         <dependency>
             <groupId>com.bulenkov</groupId>
