Fixed minor typo

--- a/src/main/resources/draganbjedov/netbeans/csv/options/Bundle.properties
+++ b/src/main/resources/draganbjedov/netbeans/csv/options/Bundle.properties
@@ -5,12 +5,12 @@ CSVEditorPanel.error.removeSeparator=Separators , and ; and Tab can not be remov
 CSVEditorPanel.error.addEscapeChar=Escape char already exists
 CSVEditorPanel.error.removeEscapeChar=Escape char " can not be removed.
 
-CSVEditorPanel.defaultEscapeCharLabel.text=Default escape charachter:
+CSVEditorPanel.defaultEscapeCharLabel.text=Default escape character:
 CSVEditorPanel.addSButton.text=Add
 CSVEditorPanel.removeSButton.text=Remove
 CSVEditorPanel.addEButton.text=Add
 CSVEditorPanel.removeEButton.text=Remove
 CSVEditorPanel.separatorsPanel.border.title=Separators
-CSVEditorPanel.escapeCharsPanel.border.title=Quoting (Escape charachters)
-CSVEditorPanel.jLabel1.text=(max 1 charachter)
-CSVEditorPanel.jLabel2.text=(max 1 charachter)
+CSVEditorPanel.escapeCharsPanel.border.title=Quoting (Escape characters)
+CSVEditorPanel.jLabel1.text=(max 1 character)
+CSVEditorPanel.jLabel2.text=(max 1 character)
